syntax = "proto3";

package health.v1;

import "google/api/annotations.proto";

message GetHealthRequest {}

message GetHealthResponse {}

service HealthService {
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {
    option (google.api.http).get = "/healthz";
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}
